# SeekerBot

./: .gitignore  README.md  base.db  base.py  base_search.py  basedata.py  config.py  debug.py  defs.py  keyboards.py  main.py  pyproject.toml  texts.py  users.db
